--- a/src/app/styles.global.css
+++ b/src/app/styles.global.css
@@ -49,3 +49,17 @@
   opacity: 1;
   transform: translateY(0);
 }
+.nav-link {
+  color: white;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.nav-link:hover {
+  color: #22d3ee; /* cyan */
+}
+
+.active-link .nav-link {
+  color: #22d3ee !important;
+  font-weight: 600;
+}
