--- a/src/app/styles.global.css
+++ b/src/app/styles.global.css
@@ -29,8 +29,7 @@
   color: #06b6d4;
 }
 .expand-card:hover {
-  /* filter: drop-shadow(2px 2px 10px white); */
-  /* filter: drop-shadow(1px 1px 2px white); */
+  box-shadow: 0px 0px 10px #06b6d4;
   transform: scale(1.01);
   transition: 0.3s ease-in-out;
 }
